refactor: use Intellij IDEA inspector to find code quality issues and fix minor ones